--- a/app/elements/appointment-list-docent/appointment-list-docent.html
+++ b/app/elements/appointment-list-docent/appointment-list-docent.html
@@ -39,7 +39,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
   </style>
   <template>
-
+test
     <template is="dom-repeat" items="{{appointList}}">
       <paper-card>
         <div class="card-content">
@@ -73,11 +73,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       is: 'appointment-list-docent',
 
       properties: {
-        foo: {
-          type: String,
-          value: 'bar',
-          notify: true
-        }
+
       },
       ready: function(){
         var self = this;
