--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -65,7 +65,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="login-element/login-element.html">
 <link rel="import" href="user-element/user-element.html">
 <link rel="import" href="create-docent/create-docent.html">
-<link rel="import" href="my-greeting/my-greeting.html">
 <link rel="import" href="create-appointment/create-appointment.html">
 
 <link rel="import" href="docent-list/docent-list.html">
@@ -81,3 +80,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="warning-dialog/warning-dialog.html">
 <link rel="import" href="appointment-list-docent/appointment-list-docent.html">
 <link rel="import" href="username-display/username-display.html">
+<link rel="import" href="no-rights/no-rights.html">
