--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -69,6 +69,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'a-create-rooms';
     });
 
+    page('/alogin', function() {
+      app.route = 'a-login';
+    });
 
     // Docent Pages
 
