--- a/app/elements/create-docent/create-docent.html
+++ b/app/elements/create-docent/create-docent.html
@@ -82,82 +82,83 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 		}
 	</style>
 	<template>
-		<paper-toolbar id="createDocentToolbar">
-			<h2>Create a new Docent</h2>
-		</paper-toolbar>
+		<div class="" hidden="{{!isAdmin}}">
+			<paper-toolbar id="createDocentToolbar">
+				<h2>Create a new Docent</h2>
+			</paper-toolbar>
 
-		</paper-toolbar>
-		<paper-material class="50percent">
-			<label class="prev">Preview</label>
-			<div class="spacer"></div>
-			<paper-item>
-				<paper-item-body three-line class="paper-item-body-0">
-					<div>
-						<span>{{computeFullName(firstName, lastName)}}</span>
-					</div>
-
-					<div secondary>{{computeSubjects(subject1,subject2,subject3)}}</div>
-					<!-- <div secondary><span>{{subject1}}</span><span>{{subject2}}</span><span>{{subject3}}</span></div> -->
-				</paper-item-body>
-			</paper-item>
-			<div class="spacer"></div>
-			<div id="inputs">
+			</paper-toolbar>
+			<paper-material class="50percent">
+				<label class="prev">Preview</label>
+				<div class="spacer"></div>
 				<paper-item>
 					<paper-item-body three-line class="paper-item-body-0">
+						<div>
+							<span>{{computeFullName(firstName, lastName)}}</span>
+						</div>
 
-						<paper-input-container>
-							<label>First Name</label>
-							<input is="iron-input" name="firstName" type="text" value="{{firstName::input}}" required>
-						</paper-input-container>
-
-						<paper-input-container>
-							<label>Last Name</label>
-							<input is="iron-input" name="lastName" type="text" value="{{lastName::input}}" required>
-						</paper-input-container>
-
-
-
+						<div secondary>{{computeSubjects(subject1,subject2,subject3)}}</div>
+						<!-- <div secondary><span>{{subject1}}</span><span>{{subject2}}</span><span>{{subject3}}</span></div> -->
 					</paper-item-body>
 				</paper-item>
+				<div class="spacer"></div>
+				<div id="inputs">
+					<paper-item>
+						<paper-item-body three-line class="paper-item-body-0">
 
-				<paper-item>
-					<paper-item-body three-line class="paper-item-body-0">
+							<paper-input-container>
+								<label>First Name</label>
+								<input is="iron-input" name="firstName" type="text" value="{{firstName::input}}" required>
+							</paper-input-container>
 
-						<paper-input-container>
-							<label>Subject 1</label>
-							<input is="iron-input" name="subject1" type="text" required value="{{subject1::input}}">
-						</paper-input-container>
-
-						<paper-input-container>
-							<label>Subject 2</label>
-							<input is="iron-input" name="subject2" type="text" value="{{subject2::input}}">
-						</paper-input-container>
-
-
-						<paper-input-container>
-							<label>Subject 3</label>
-							<input is="iron-input" name="subject3" type="text" value="{{subject3::input}}">
-						</paper-input-container>
+							<paper-input-container>
+								<label>Last Name</label>
+								<input is="iron-input" name="lastName" type="text" value="{{lastName::input}}" required>
+							</paper-input-container>
 
 
-						<paper-input-container>
-							<label>Password</label>
-							<input is="iron-input" name="password" type="password" required>
-						</paper-input-container>
 
-						<paper-input-container>
-							<label>E-Mail</label>
-							<input is="iron-input" name="Email" type="Email">
-						</paper-input-container>
+						</paper-item-body>
+					</paper-item>
 
-					</paper-item-body>
-				</paper-item>
-			</div>
-			<div id="button-create">
-				<paper-button class="submitButton" autovalidate center-center raised on-click="handleClick">Create</paper-button>
-			</div>
-		</paper-material>
+					<paper-item>
+						<paper-item-body three-line class="paper-item-body-0">
 
+							<paper-input-container>
+								<label>Subject 1</label>
+								<input is="iron-input" name="subject1" type="text" required value="{{subject1::input}}">
+							</paper-input-container>
+
+							<paper-input-container>
+								<label>Subject 2</label>
+								<input is="iron-input" name="subject2" type="text" value="{{subject2::input}}">
+							</paper-input-container>
+
+
+							<paper-input-container>
+								<label>Subject 3</label>
+								<input is="iron-input" name="subject3" type="text" value="{{subject3::input}}">
+							</paper-input-container>
+
+
+							<paper-input-container>
+								<label>Password</label>
+								<input is="iron-input" name="password" type="password" required>
+							</paper-input-container>
+
+							<paper-input-container>
+								<label>E-Mail</label>
+								<input is="iron-input" name="Email" type="Email">
+							</paper-input-container>
+
+						</paper-item-body>
+					</paper-item>
+				</div>
+				<div id="button-create">
+					<paper-button class="submitButton" autovalidate center-center raised on-click="handleClick">Create</paper-button>
+				</div>
+			</paper-material>
+		</div>
 	</template>
 </dom-module>
 <script>
@@ -166,6 +167,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 			is: 'create-docent',
 
 			properties: {
+				isAdmin: {
+					type: Boolean,
+					notify: true,
+					value: false
+				},
 				firstName: {
 					type: String,
 					value: '',
@@ -201,6 +207,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 				return subject1 + ', ' + subject2 + ', ' + subject3;
 			},
+			ready: function() {
+				var currentUser = Parse.User.current();
+				if (currentUser.get("isAdmin")) {
+					this.isAdmin = true;
+					console.log(this.isAdmin);
+				} else {
+					console.log(this.isAdmin);
+				}
+			},
 			handleClick: function() {
 				var
 					Email = $('[name="Email"]').val(),
@@ -226,7 +241,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 					alert("Error: Alle Felder müssen ausgefüllt werden");
 
 				} else {
-					var userRandom = Math.floor((Math.random() * 1000) + 1);
+
 
 					username = Email;
 					var user = new Parse.User();
@@ -240,6 +255,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 					user.set("subject1", subject1);
 					user.set("subject2", subject2);
 					user.set("subject3", subject3);
+					var sessionToken = Parse.User.current().getSessionToken();
 
 					user.signUp(null, {
 						success: function(user) {
@@ -279,7 +295,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 									docent.save(null, {
 										success: function(docent) {
 
-
+											user.set("Docent", docent);
+											user.save();
+													Parse.User.become(sessionToken);
 										},
 										error: function(docent, error) {
 
